<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.atodogas.brainycar.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Toolbar"
        app:popupTheme="@style/OverflowToolbar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/authorsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authors"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/authorsDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authorsDesc"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorPrimaryLigth2"/>

            <TextView
                android:id="@+id/versionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/versionDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/versioDesc"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorPrimaryLigth2"/>

            <TextView
                android:id="@+id/generalInfoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generalInfo"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/generalInfoDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generalInfoDesc"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorPrimaryLigth2"/>

            <TextView
                android:id="@+id/eulaTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_title"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/eulaDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eula_desc"
                android:textColor="@color/colorPrimaryDark"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/colorPrimaryLigth2"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>