<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/estadisticas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/measureTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/measure"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryExtraDark"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/measureTitle"
                android:layout_marginTop="10dp"
                android:background="@drawable/empty_rectangle">
                <Spinner
                    android:id="@+id/spinnerMeasure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:popupBackground="@color/colorPrimaryLigth"/>
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/periodTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/period"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryExtraDark"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/periodTitle"
                android:layout_marginTop="10dp"
                android:background="@drawable/empty_rectangle">
                <Spinner
                    android:id="@+id/spinnerPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:popupBackground="@color/colorPrimaryLigth"/>
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_weight="8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPrevious"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textColor="@color/colorPrimaryExtraDark"
            android:background="@drawable/empty_rectangle"/>

        <TextView
            android:id="@+id/periodGraph"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryExtraDark"
            android:hapticFeedbackEnabled="true"/>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/colorPrimaryExtraDark"
            android:background="@drawable/empty_rectangle"
            android:hapticFeedbackEnabled="true"/>
    </LinearLayout>
</LinearLayout>